# shape_grounder

./: .gitignore  README.md  pyproject.toml
src/shapegrounder/: __init__.py  api.py  classify.py  cli.py  config.py  contours.py  describe.py  features.py  image.py  schemas.py
src/shapegrounder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_classify.py  test_cli.py  test_config.py  test_contours.py  test_describe.py  test_features.py  test_schema.py  test_smoke.py
